@@ -60,4 +60,5 @@ fi
 
 EXEC="$JAVA_HOME/bin/java $CC_OPTS -cp $CRUISE_PATH -Djavax.management.builder.initial=mx4j.server.MX4JMBeanServerBuilder CruiseControlWithJetty $@ -jmxport 8000"
 echo $EXEC
-exec $EXEC
+$EXEC &
+echo $! > cc.pid
